Fix #2187 alignment when attached tags

--- a/src/scss/components/_taginput.scss
+++ b/src/scss/components/_taginput.scss
@@ -2,6 +2,7 @@ $taginput-height: 1.7em !default;
 
 .taginput {
     .taginput-container {
+        display: flex;
         &.is-focusable {
             @extend .input;
             padding-bottom: 0;
